/*
 * Copyright (C) 2020 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package perfetto.protos;

message ObfuscatedMember {
  // This is the obfuscated field name relative to the class containing the
  // ObfuscatedMember.
  optional string obfuscated_name = 1;
  // If this is fully qualified (i.e. contains a '.') this is the deobfuscated
  // field name including its class. Otherwise, this is this the unqualified
  // deobfuscated field name relative to the class containing this
  // ObfuscatedMember.
  optional string deobfuscated_name = 2;

  // R8 inline method support: line number ranges for disambiguation.
  // When multiple methods map to the same obfuscated name, the line number
  // from the stack frame is used to select the correct mapping.
  //
  // Format in R8 mapping: "1:3:void foo():10:12 -> a"
  // - obfuscated_line_start/end = 1:3 (line range in obfuscated code)
  // - source_line_start/end = 10:12 (line range in original source)
  //
  // Methods with the same obfuscated_name and overlapping obfuscated line
  // ranges form an inline chain, ordered innermost (inlined) first.
  optional uint32 obfuscated_line_start = 3;
  optional uint32 obfuscated_line_end = 4;
  optional uint32 source_line_start = 5;
  optional uint32 source_line_end = 6;
}

message ObfuscatedClass {
  optional string obfuscated_name = 1;
  optional string deobfuscated_name = 2;
  // fields.
  repeated ObfuscatedMember obfuscated_members = 3;
  repeated ObfuscatedMember obfuscated_methods = 4;
}

message DeobfuscationMapping {
  optional string package_name = 1;
  optional int64 version_code = 2;
  repeated ObfuscatedClass obfuscated_classes = 3;
}